--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ body {
   font-size: 3rem;
   padding-right: 1rem;
   padding-top: .3rem;
+  overflow: hidden;
 }
 
 .calc .calc__display-container .display__text {
